--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
+    "firebase-admin": "^10.1.0",
     "mongoose": "^6.3.1"
   }
 }
