--- a/package.json
+++ b/package.json
@@ -5,15 +5,26 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "nodemon server.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@handlebars/allow-prototype-access": "^1.0.5",
+    "bcrypt": "^5.0.1",
+    "body-parser": "^1.20.0",
+    "connect-mongo": "^4.6.0",
+    "cookie-parser": "^1.4.6",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
+    "express-handlebars": "^6.0.6",
+    "express-session": "^1.17.3",
     "firebase-admin": "^10.1.0",
-    "mongoose": "^6.3.1"
+    "handlebars": "^4.7.7",
+    "log4js": "^6.5.2",
+    "mongoose": "^6.3.1",
+    "passport": "^0.6.0",
+    "passport-local": "^1.0.0"
   }
 }
