--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "handlebars": "^4.7.7",
     "log4js": "^6.5.2",
     "mongoose": "^6.3.1",
+    "nodemailer": "^6.7.7",
     "passport": "^0.6.0",
     "passport-local": "^1.0.0"
   }
